rename done -> archive
